@startuml

abstract class Entity {
    + Id : Guid
    + Created : DateTime
    + Modified : DateTime
}

class Competition {
    + EventStart : DateTime
    + DisciplineSessions : DisciplineSession[]
    + HeadJuror : ClubMember
    + CompetitionManager: ClubMember
}

class ClubMember {
    + FirstName : string
    + LastName : string
    + Roles : MemberRole
}

enum MemberRole {
    Unspecified = 0
    Athlete = 1
    Coach = 2
    Juror = 4
    HeadJuror = 8
}

class Discipline {
    + Name : string
    + ScoringAlgorithm : ScoringAlgorithm
}

class ScoringAlgorithm {
    + GetScore() : double
}

class StartListEntry {
    + Athlete : ClubMember
    + Coach : ClubMember
    + Wheel : Wheel
    + StartPosition : int
}

class DisciplineSession {
    + Discipline : Discipline
    + Juror : ClubMember
    + ScoreBoard : ScoreBoard
    + StartList : StartListEntry[]
}

class ScoreEntry {
    + Juror : ClubMember
    + Value : double
}

class PerformanceEntry {
    + Athlete : StartListEntry
    + ScoreValues : ScoreEntry[]
    + Difficulty : double
    + FinalScore : double
}

class ScoreBoard {
    + HighScore : PerformanceEntry[]
}

class Wheel {
    + Size : float
}

Entity <|-- Competition
Entity <|-- DisciplineSession
Entity <|-- Discipline
Entity <|-- ScoringAlgorithm
Entity <|-- ScoreBoard
Entity <|-- PerformanceEntry
Entity <|-- StartListEntry
Entity <|-- ClubMember
Entity <|-- Wheel
Entity <|-- ScoreEntry

Competition "1" o.. "0..*" DisciplineSession : Disciplines
ClubMember "1" o.. "1..*" MemberRole : Role
StartListEntry "1" *.. "1" ClubMember : Athlete
StartListEntry "1" *.. "1" ClubMember : Coach
StartListEntry "1" *.. "1" Wheel : Wheel
DisciplineSession "1" *.. "1" Discipline : Discipline
DisciplineSession "1" *.. "1" ClubMember : Juror
DisciplineSession "1" *.. "1" ScoreBoard : ScoreBoard
DisciplineSession "1" o.. "*" StartListEntry : StartList
Discipline "1" *.. "1" ScoringAlgorithm : ScoringAlgorithm
PerformanceEntry "1" *.. "1" StartListEntry : Athlete
PerformanceEntry "1" o.. "0..*" ScoreEntry : ScoreValues
ScoreBoard "1" o.. "0..*" PerformanceEntry : HighScore

@enduml